# interpolate

./: CMakeLists.txt
include/: interpolate.hpp
src/: interpolate.cpp
test/: CMakeLists.txt  main.cpp
